--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Mario Amaya <thefozcat@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "helmet": "^3.18.0",
